# tab

./: Cargo.toml  Dockerfile  README.md  docker-entrypoint.sh
discord-utils/: Cargo.toml
discord-utils/src/: client.rs  environment.rs  lib.rs  sentry.rs  user.rs
discord-utils/src/audio/: controls.rs
discord-utils/src/preset_commands/: ping.rs
src/: audio.rs  event_handler.rs  guild_utils.rs  main.rs  song_queue.rs
src/commands/: mod.rs  ping.rs  play.rs  stop.rs
