[package]
name = "tab"
version = "0.1.0"
authors = ["Evan Pratten <ewpratten@gmail.com>"]
edition = "2018"
description = "An educational youtube music bot for private discord servers"
readme = "README.md"
homepage = "https://github.com/ewpratten/tab"
repository = "https://github.com/ewpratten/tab"
license = "GPL-3.0"
keywords = []
categories = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serenity = { version = "0.10", features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
    "unstable_discord_api",
    "builder",
    "cache",
    "http",
    "utils",
    "voice",
    "cache",
    "standard_framework",
    "framework"
] }
clap = "2.33"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"
sentry = "0.23"
songbird = { git = "https://github.com/serenity-rs/songbird", branch = "current", version = "0.2", features = [
    "serenity-rustls",
    "gateway",
    "default"
] }
