[package]
name = "discord-utils"
version = "0.1.0"
authors = ["Evan Pratten <ewpratten@gmail.com>"]
edition = "2018"
description = "Utilities for working with discord bots"
readme = "README.md"
homepage = "https://github.com/ewpratten/discord-utils"
repository = "https://github.com/ewpratten/discord-utils"
license = "GPL-3.0"
keywords = []
categories = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serenity = { version = "0.10", features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
    "unstable_discord_api",
    "builder",
    "cache",
    "http",
    "utils",
    "voice",
    "cache",
    "standard_framework",
    "framework"
] }
clap = "2.33"
tokio = { version = "1.0", features = ["macros", "signal"] }
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"
sentry = "0.23"
songbird = { git = "https://github.com/serenity-rs/songbird", branch = "current", version = "0.2", features = [
    "serenity-rustls",
    "gateway",
    "default"
] }
url = "2.2"
serde = { version = "1.0.126", features = ["derive"] }
